<resources>
    <string name="app_name">VirtualTattoo</string>

    <string name="forgotPassword"><a href="http://www.orf.at">Forgot password?</a></string>
    <string name="signIn"><a href="http://www.orf.at">Sign In</a></string>
    <string name="menu_my_collection">My Collection</string>
    <string name="menu_browse_designs">Browse Designs</string>
    <string name="menu_nearby_studios">Nearby Studios</string>
    <string name="menu_vr_tattoo">VR Tattoo</string>
    <string name="menu_import">Import</string>
    <string name="menu_help">Help</string>
    <string name="menu_options">Options</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_new_sketch">New Sketch</string>
    <string name="help_text">FAQ: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, 1.1 sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, 1.2 sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est 1.3 Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, 1.4 Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,</string>
    <string name="virtualtattoo_onlinehelp_and_support">VirtualTattoo OnlineHelp and Support</string>
    <string-array name="sketch_array">
        <item>Sketch01</item>
        <item>Skull</item>
        <item>Flames</item>
        <item>Fern</item>
        <item>Saturn</item>
    </string-array>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
